--- a/w.html
+++ b/w.html
@@ -49,50 +49,8 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Kyra's Website</h2>
-<img src="img/peppy2.jpeg" with=720 height="200">
-<img src="img/peppy1.jpg" with= 400 height="200">
-<img src="img/peppy3.jpeg" with= 200 height="200">
-
-
-  <!-- The Tour Section -->
-  <div class="w3-blue" id="tour">
+    <h2 class="w3-wide">WEEK 1</h2>
+    <div class="w3-blue" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">ABOUT ME</h2>
-      Hi my name is Kyra and I am a freshman at Wheaton College. I am very excited to starting sharing the work I create, including how I created the website. Some fun facts about me is I've been dancing for 16 years, and of those 16 years its all been at the same studio. I have a dog, her name is pepper (those are some pictures of her above). I'm thinking of being a film major and maybe minor in dance.
-
-     <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: Ward_Kyra@wheatoncollege.edu<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-      </div>
-<!-- End Page Content -->
-
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
-
-</body>
-</html>
+This week's assignment was to create this website. Now if I am being honest it was a diffcult task for me at first. The set up of the Github website gave me some trouble. First it asked me to download something I needed to be able to do the task of cloning the website. Which at first I didn't do because I was worried it was going to actually be a virus. But after I followed the steps and realized it didnt work I knew I had to downlaod what it was telling me. I did but I was still having trouble. For some reason no matter what I did it just wasnt working, I put in all the infomration it needed when it asked but it just didnt work. So after a day I tried again making sure to follow the steps given exactly. It eventually ended up working and I had the website with "hello world"
+<img src="img/helloworld.png" with=300 height="300">
