--- a/wwwwwwww.html
+++ b/wwwwwwww.html
@@ -46,53 +46,34 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">Kyra's Website</h2>
-<img src="img/peppy2.jpeg" with=720 height="200">
-<img src="img/peppy1.jpg" with= 400 height="200">
-<img src="img/peppy3.jpeg" with= 200 height="200">
-
-
-  <!-- The Tour Section -->
-  <div class="w3-blue" id="tour">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">ABOUT ME</h2>
-      Hi my name is Kyra and I am a freshman at Wheaton College. I am very excited to starting sharing the work I create, including how I created the website. Some fun facts about me is I've been dancing for 16 years, and of those 16 years its all been at the same studio. I have a dog, her name is pepper (those are some pictures of her above). I'm thinking of being a film major and maybe minor in dance.
-
-     <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: Ward_Kyra@wheatoncollege.edu<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-      </div>
-<!-- End Page Content -->
-
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
 }
+</style>
+<body>
 
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
+  <div class="w3-display-left w3-padding-large w3-xlarge">
+    Week 8
+  </div>
+  <div class="w3-display-middle">
+    <h1 class=>COMING SOON</h1>
+    <hr class="w3-black" style="margin:auto;width:40%">
+  </div>
+  </div>
+</div>
 
 </body>
 </html>
