--- a/www.html
+++ b/www.html
@@ -46,34 +46,84 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body>
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">WEEK 3</h2>
+    <div class="w3-blue" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+Ok, so techically we are supposed to document what we did step by step and put it all together in a coherent matter but this project killed my sanity. Not only was I in the lab working for 6 hours but I had not 1, not 2, not 3, not 4, but 5 attempts on getting this to work. attempts 1-3 I deleted all screenshots from out of frustration but heres a summary of them. Attempt 1 I did the wrong symbol, (I ended up printing it out anyways that picture will be at the end) attempt 2 I wanted to do the harder symbol thinking it might be easier... and attempt 3 it looked so ugly I didn't know where I went wrong so I deleted the whole thing to start over. Now after all those attempts you'd think I had enough to string together some logical process of what I ended up doing, and for most I can and some I remeber but the majority of it I did so many different things I couldnt even tell you what worked. Well good news! I did such a good job screenshotting my work I ended up with over 75 screenshots on my lap top. All of them are out of order and no matter which way I sort them they are ALWAYS not in the correct order of me taking them.
+<img src="img/cw1.png" width=740 height=370>
+With the amount of times I changed things and screenshotted each change I ended up getting myslef more confused in the end. Not to mention I changed so much in the end my first attempts on the 4th attempts weren't even the final product. Now just to clear things up attempt number 4 was the one I ended up printing out, so why is there a attempt 5? Well I thought "oh maybe I can just recreate it one more time and screenshot it there" lets just say that didn't work either cause I ran into the same problem of trying to remeber what ended up working. But there is some good news with all of this. I know how to do the very start and then the very end. The middle I'm just going to say what I did and why it didn't work.
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-left w3-padding-large w3-xlarge">
-    Week 3
-  </div>
-  <div class="w3-display-middle">
-    <h1 class=>COMING SOON</h1>
-    <hr class="w3-black" style="margin:auto;width:40%">
-  </div>
-  </div>
-</div>
+So the first thing I did was create a sketch on the bottom layer. Then I used the circle tool to create a circle 50mm long.
+<img src="img/cw2.png" width=740 height=370>
+Next, I pressed the E key on my keyboard and extruted the circle 2.5 mm.
+<img src="img/cw3.png" width=740 height=370>
+Then after that I created a new sketch on the cirlce.
+<img src="img/cw4.png" width=740 height=370>
+Once I was now on the new sketch in the circle I used the offset tool to create 4 more circles within the other circle.
+<img src="img/cw5.png" width=740 height=370>
+<img src="img/cw6.png" width=740 height=370>
+<img src="img/cw7.png" width=740 height=370>
+<img src="img/cw8.png" width=740 height=370>
+<img src="img/cw9.png" width=740 height=370>
+(I ended up changing this value in the end)
+<img src="img/cw10.png" width=740 height=370>
+Then I created 3 construction lines just to use as a genral guide when starting my lines for the triangle part.
+<img src="img/cw11.png" width=740 height=370>
+Now here is when things go south, and pretty fast. I knew I had to create the lines going up so I first wanted to find a way to center it over the x axis. So I set the center to be a mid point.
+<img src="img/cw12.png" width=740 height=370>
+Side note, those pictures are from attempt 5 because I didn't have them from attempt 4 but it was the same process just at different times. So if the extra circles go away it doesnt matter I just added them later... which ended up causing a problem but thats not important yet. Now I drew my first line. And not surpisingly I had trouble drawing the line. For some reason when I drew the line to go straight up it didn't do that. What happened was the top point would stay the same but the bottom point would just go all around the cirlce making the line diagonal and not verticle like I wanted. At this point I was starting to get very annoyed with my circle and asked around why its doing this. Then Kevin came over and just drew the line straight up with no issue. I tried again 3 times but it was still not working. How did I have so much trouble drawing a straight line is beyond my comprehension. After probably 5 mins I finally drew a straight line and set it to 10 mm.
+<img src="img/cw13.png" width=740 height=370>
+The next thing I did was copy and pasted the line and just put it right next to each other. Then I copy and pasted both lines to get my next set because I was not going to struggle drawing more straight lines. Copy and pasting ended up messing me up in the end for some reason I still don't really know how it happened but it just did. So, 0/10 do not copy and paste lines for this project.
+<img src="img/cw14.png" width=740 height=370>
+Then I thought the lines were going to be too thin like attempt number 3 so I deleted the whole thing and re did my lines. Once again I had a hard time drawing a straight line. But I eventually did it so now I am back on track. Or so I thought.
+<img src="img/cw15.png" width=740 height=370>
+<img src="img/cw16.png" width=740 height=370>
+Now I knew I needed circles for the symbol. So I mad a circle and set it to 9mm.
+<img src="img/cw17.png" width=740 height=370>
+<img src="img/cw18.png" width=740 height=370>
+Next I thought it looked a bit weird so someone down there suggested I tried to make the guide lines equal to each other so they would all be the same size. Even though I set the lenght to 10 for all of them they all looked a different size and the triangle looks weird so thats what I did. I dont have a screenshot but it messed my whole project up and brought the top one all the way down to the center... I honestly don't know what went wrong. So then I thought making the cirlces bigger might help.
+<img src="img/cw19.png" width=740 height=370>
+<img src="img/cw20.png" width=740 height=370>
+Yeah... I orignally thought this actually looked good... As you can see it looks like a fidget spinner gone wrong. But at this point it was an issue for another day. Now I remembered in this attempt I did not add the other cirlces so I did the same thing as before to add the inner cirlces.
+<img src="img/cw21.png" width=740 height=370>
+At that moment I knew I messed up with my lines connecting from the inner most circle when they needed to connect to the second inner most cirlce. So I deleted my lines and added construction lines connecting my circles together to try and still make them look even.
+<img src="img/cw22.png" width=740 height=370>
+Next I once again had to re draw my lines. Horray! Let's just take a moment and look at the lines I drew. They are all kinds of not even and messed up but It is fine... Right?
+<img src="img/cw23.png" width=740 height=370>
+Now If i am being honest I to this very moment have no idea how I got from that, to this next picture. But my lines are straight and even. I think I copy and pasted again once I got one set done, they are still too thick though. And the right most one the lines don't even connect to the right circle. At this point it is 8pm, I was very very hungry from not eating mostly all day so I am not suprised I messed that up and why this is all a blur to me.
+<img src="img/cw24.png" width=740 height=370>
+Now I offically lost all brain cells in this very moment because I thought, Oh I remeber the video talking about a polygon tool and someone else used it too so thats has to be what I use to create the little holes on the sides before the line. I am ashamed to even screenshotted this next bit. And let me give you a hint... This is NOT what you are supposed to do. Actually it is a lot easier than I thought because I forgot how angles work and that the cut in the design is not angular.
+<img src="img/cw25.png" width=740 height=370>
+What you're actually supposed to do is just draw one line going up from the second most inner cirlce to the thrid most inner circle then I made it parallel to the construction line from earlier. Now at this point I was so done and confused on how to make everything even that Kevin basically held my hand for the rest of this. But I can clearly say I know exactly how to do it now.
+<img src="img/cw26.png" width=740 height=370>
+Then I set the construction line at the top to be 16mm just to lock it into place and to make everything stick together. I also drew the other little line on the other side of the big line and put a construction line between the two smaller lines for the little cut outs.
+<img src="img/cw28.png" width=740 height=370>
+The next thing I did just draw 2 lines on each side of the next side I was doing. Then I set those 2 lines parallel with each other and connected a construction line between them. I set that construction line equal with the other construction line for first one I did so it would be the same size. Next I set the construction line connecting the two little lines perpendicular to the big construction line so it is all at a right angle. Kevin had to remind me at least 2 times I just needed to do it for one side of the line because I forgot all about geometry.
+<img src="img/cw29.png" width=740 height=370>
+Then I did the exact same thing for the last one. It took me a few tries at first because I kept messing up and once again forgetting geometry, maybe I should have paid more attention in my 10th grade geometry class. I don't have any screenshots but there were times I sent one of the lines at the worst angle possible for no reason what so ever. That happened a few times and I kept getting scared I would mess the whole thing up again, yes that was an issue that happened mulitple times I would mess something up that was 100% unbreakable before. So much we had to save the file and you can see what we eneded up calling it in the next picture.
+<img src="img/cw30.png" width=740 height=370>
+Now this is what I ended up with 'first try'. It didn't look right so I went back to fix a few things.
+<img src="img/cw31.png" width=740 height=370>
+Now this is where the copy and paste of the lines really screwed me over. I couldn't easily change the distance between the lines for the part that comes out. Meaning ONCE AGAIN I HAD TO RE DRAW THE LINES AND THIS TIME MAKE IT RIGHT. So, that is what I had to do. But this time I am a master at drawing those straight lines.
+<img src="img/cw32.png" width=740 height=370>
+Then I was left with this...
+<img src="img/cw33.png" width=740 height=370>
+And here is it with it extruted. The gaps between the cirlce and the lines were now way too big so once again back to the image.
+<img src="img/cw34.png" width=740 height=370>
+So I changed the size of the gaps just by changing that 1 line size. and I also changed the thickness of the 2 circles and it worked like a charm. So here is my final product all I had to do was export it.
+<img src="img/cw35.png" width=740 height=370>
+<img src="img/cw37.png" width=740 height=370>
+<img src="img/cw36.png" width=740 height=370>
+When I exported it I had no issues whats so ever, for once. I dont have any screenshots only because I was very tired at this point and needed to get it printed that night. So with no issue I saved it to the cloud first then exported it as a .snl, then I put it on my drive from my laptop onto the mac desktops. Opened the file in prusaslicer, slected the correct printer and added it to the SD card. Then I rolled the chair over to the printer, put in my filament and hit go. And about a few minutes in I noticed it wasn't sticking. Oh of course it didn't want to stick. I took out the SD card and the filament and reopened the file on prusaslicer changed the printer set up the new printer and it printed like a charm.
+<img src="img/cw38%20copy.jpg" width=740 height=370>
+<img src="img/cw39%20copy.jpg" width=740 height=370>
+<img src="img/cw40%20copy.JPG" width=370 height=540>
+Here is a picture of me right after it was printed. I was then very done with this project and very tired but I thought it would be funny to add here anyways.
+<img src="img/cw41%20copy.JPG" width=370 height=540>
+And then here is the image of the wrong one I printed out
+<img src="img/cw42%20copy.jpg" width=370 height=540>
+Overall I didn't actually hate this project it was quite fun. My biggest issues probably had to be not knowing geometry, drawing straight lines, and assuming things would just work the way you'd think they would. In the end all I can say is... I missed using blender.
 
-</body>
-</html>
