--- a/wwww.html
+++ b/wwww.html
@@ -46,34 +46,75 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-left w3-padding-large w3-xlarge">
-    Week 4
-  </div>
-  <div class="w3-display-middle">
-    <h1 class=>COMING SOON</h1>
-    <hr class="w3-black" style="margin:auto;width:40%">
-  </div>
-  </div>
-</div>
-
-</body>
-</html>
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">WEEK 4</h2>
+    <div class="w3-blue" id="tour">
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    Another week another load of screenshots to get through, this episode 102 SCREENSHOTS.
+<img src="img/ss1.png" width=740 height=370>
+The task for this week was to 3D print a flower pot and design a watering can. So the frist thing I did was the pot, and the first thing I did was create a sketch and make a circle 50 cm.
+<img src="img/p1.png" width=740 height=370>
+Off of that I created a construction line off a little bit to the side and set it verticle so it was constraint
+<img src="img/p2.png" width=740 height=370>
+Then I used the dimensions tool to set the hight to be 26mm.
+<img src="img/p3.png" width=740 height=370>
+Then I made a circle with the dimensions of 6 mm.
+<img src="img/p4.png" width=740 height=370>
+Then I used the trim tool to trim the outside of the new circle I made so I'm left with a half cirlce in the middle of the bigger circle.
+<img src="img/p6.png" width=740 height=370>
+Then I used the circle pattern tool to create the pattern all the way around. In the picture it says 27 in the screenshot but I changed it to 28 times around the cirlce.
+<img src="img/p7.png" width=740 height=370>
+I then extruted the pot 50mm up.
+<img src="img/p8.png" width=740 height=370>
+<img src="img/p9.png" width=740 height=370>
+So that was the one we were supposed to do, but I wanted to make a pumpkin for spooky season. So damnit I'm making a pumking. I did the exact same thing up until the cirlce. I made the circle 16mm long instead of 6mm.
+<img src="img/p10.png" width=740 height=370>
+Then I used the cut tool to cut the part of the circle on the inside rather than the outside.
+<img src="img/p11.png" width=740 height=370>
+Then I used the cirlce pattern tool one more time and made it go around 10 times.
+<img src="img/p12.png" width=740 height=370>
+Then I extruted it 25 mm. The rest of the pictures from the project are not allowing me to post them for some reason so I'll get those up tomorrow. The process was brining it in Prusaslicer, I changed the deminsions a bit to make it wider so it looked more like a pumkin, then I went into print settings -> verticle shells -> spiral base and clicked the box. Then I brought it to the printer and printed it out. It took 2 tries because the orange PLA wasn't working :(
+<img src="img/p13.png" width=740 height=370>
+So the next part was to create the watering can. I started out by making an oval, 50 mm long and 25mm high.
+<img src="img/w1.png" width=740 height=370>
+Then I extruted it 50 mm.
+<img src="img/w2.png" width=740 height=370>
+The next thing I did was creat a sketch on the top of the oval and created a construction line and set it to be horizontal.
+<img src="img/w3.png" width=740 height=370>
+Next I created a plane tangent to a face at point to make a plan coming right off of the oval front.
+<img src="img/w4.png" width=740 height=370>
+<img src="img/w5.png" width=740 height=370>
+I created a sketch and a construction line box around the plane and a line going down 20mm. Then I made a construction line going across and set that to be 18mm and projected the bottom of my oval so everything was connected.
+<img src="img/w6.png" width=740 height=370>
+<img src="img/w7.png" width=740 height=370>
+<img src="img/w8.png" width=740 height=370>
+Then I did create a plane at a angle and set it to 60.
+<img src="img/w9.png" width=740 height=370>
+Then I created a cirlce and extruded it 30 up and like 10 in.
+<img src="img/w10.png" width=740 height=370>
+Then I created an offset plane and set it 7 mm up.
+<img src="img/w11.png" width=740 height=370>
+<img src="img/w12.png" width=740 height=370>
+Then I created a sketch on that plane, I projected the center of the last circle on my new sketch and made a new circle to be 15mm.
+<img src="img/w13.png" width=740 height=370>
+Then I used the loft tool to connect the two cirlces together.
+<img src="img/w14.png" width=740 height=370>
+<img src="img/w15.png" width=740 height=370>
+Then I used the shell tool and made it 1 mm thick and the rest was fully hollow.
+<img src="img/w16.png" width=740 height=370>
+Next I created the little holes in the cone looking part. I forgot the name of that part of a watering can, as you can see I am fantastic with words. So I offset 3 construction circles to have as a base for the holes.
+<img src="img/w17.png" width=740 height=370>
+<img src="img/w18.png" width=740 height=370>
+Then I created a construction line going up to each circle and created a cirlce 1mm on each line.
+<img src="img/w19.png" width=740 height=370>
+<img src="img/w20.png" width=740 height=370>
+Then I did the circle pattern for all 3 circles and repeated it. I did 6 for the first 2 cirlces and then 3 for the inner most circle.
+<img src="img/w21.png" width=740 height=370>
+<img src="img/w22.png" width=740 height=370>
+<img src="img/w23.png" width=740 height=370>
+Then I extruted the circles and changed it to intersect and set it to -1mm
+<img src="img/w24.png" width=740 height=370>
+Then I used the fillet tool and set the edge to 1mm. And that is the final product.
+<img src="img/w25.png" width=740 height=370>
