--- a/wwww.html
+++ b/wwww.html
@@ -118,3 +118,4 @@ Then I extruted the circles and changed it to intersect and set it to -1mm
 <img src="img/w24.png" width=740 height=370>
 Then I used the fillet tool and set the edge to 1mm. And that is the final product.
 <img src="img/w25.png" width=740 height=370>
+<a href="https://drive.google.com/drive/folders/1iq--QQoGkSfcora1YNGOjbKYf-WhDTGI?usp=sharing">Files for this week</a>
