--- a/wwwww.html
+++ b/wwwww.html
@@ -45,34 +45,88 @@ body {font-family: "Lato", sans-serif}
   <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-left w3-padding-large w3-xlarge">
-    Week 5
-  </div>
-  <div class="w3-display-middle">
-    <h1 class=>COMING SOON</h1>
-    <hr class="w3-black" style="margin:auto;width:40%">
-  </div>
-  </div>
-</div>
-
-</body>
-</html>
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
+  <!-- The Band Section -->
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2 class="w3-wide">WEEK 5</h2>
+    <div class="w3-blue" id="tour">
+This week even though I messed up a lot I kept it pretty good with the amount of screenshots I had, this week only 51.
+<img src="img/ss3.png" width=740 height=370>
+So the first part of the assigment was to get trained on the Axiom which surpisingly wasnt all that complicated for basic training. As with any program the first step is to open a new project. Then we played around with some of the tools and drawing things but then we had to make a box
+<img src="img/cnc1.jpg" width=740 height=370>
+Then we can set the size of the box over on the side to make it the size we want. Then I drew the rest of my shapes, a cirlce and a star, and once they were the correct size and place it was time to add the paths.
+<img src="img/cnc2.jpg" width=740 height=370>
+I added the 2D profile toolpath the the outside of the box so it cuts all the way through.
+<img src="img/cnc3.jpg" width=740 height=370>
+<img src="img/cnc5.jpg" width=740 height=370>
+Then we needed to add tabs to it so it didnt move around while it was cutting. So thats what I did I added tabs to the corners of my box
+<img src="img/cnc4.jpg" width=740 height=370>
+<img src="img/cnc6.jpg" width=740 height=370>
+Then I used the pocket toolpath on my cirlce, this one doesnt cut it all the way though it like engraves it. And I did the profile toolpath for the star and added tabs as well. Then for each path I had to select the tool bit we used, it was one of the down drill bits. Then once that was all done you save them as seperate projects on the SD card then head to the machine.
+<img src="img/cnc7.jpg" width=740 height=370>
+The first step of the machine is to turn it on. (and get saftey googles and ear plugs)
+<img src="img/cnc8.jpg" width=740 height=370>
+Then the next step is to take off the duster thing and make sure your toolbit is in the machine using the wrenches. Which I was very close of slipping and bashing my hand into the machine but its fine. And then I turned on the duster where all the dust should go through but it never actually does all the way.
+<img src="img/cnc9.jpg" width=740 height=370>
+Then we taped and drilled our material down so it doesn't move and cause injury.
+<img src="img/cnc10.jpg" width=740 height=370>
+The next step was to bring it to the orgin/ set the orgin so it knows where to start cutting.
+<img src="img/cnc11.jpg" width=740 height=370>
+Then by plugging in the little blue thing it sets the height of the material which tells the machine where to start cutting.
+<img src="img/cnc12.jpg" width=740 height=370>
+Then you select your file from the SD card and cut it out.
+<img src="img/cnc13.jpg" width=740 height=370>
+And here is my final project.
+<img src="img/cnc14.jpg" width=740 height=370>
+The next part is where it started to get hard for me and it honestly had no reason to be this difficult but softwares hate me so here we are. So I decided I wanted to creat a box so I could keep some pictures in and have it kinda look like one of the new types of instant cameras. I cant tell you how or why it took like 5 hours to complete the worlds most simplest box, but here are all of my mistakes and trying to figure something out. It started off strong with creating the outline from a picture of the camera.
+<img src="img/pb1.png" width=740 height=370>
+Then I copied it to create the bottom of the box.
+<img src="img/pb2.png" width=740 height=370>
+Then I started tracing and filling the inside of the little details to make it look better, the ones that are filled in are supposed to be carved out and not cut out either using the lazer cutter or the Axiom.
+<img src="img/pb3.png" width=740 height=370>
+<img src="img/pb4.png" width=740 height=370>
+<img src="img/pb5.png" width=740 height=370>
+Then I wanted to create a 3D part of the face with the the camera part. This is where things went down hill and fast. So I wanted to make this no glue at first so I made a circle and created a little box and then used a tool to have it go around the circle 45 times. I used this <a href="https://www.youtube.com/watch?time_continue=6&v=2gNusSfyi2s&feature=emb_logo">video</a> to figure it out.
+<img src="img/pb6.png" width=740 height=370>
+Then I made another cirlce and tried doing the same thing but for the outside of it. See this was my first mistake out of many. I know this now that this is not how notches work but I still couldnt figure out with Illustrator how to exactly make it so they could fit it together.
+<img src="img/pb7.png" width=740 height=370>
+Then what ever brain cells I had left knew that was not how you do it so I tried again, but this time it was still wrong. I decided to try and make a smaller circle in the middle that linned up with the the already created little nobs and then try and go around that with the box. Yeah I don't know my mindset either.
+<img src="img/pb8.png" width=740 height=370>
+<img src="img/pb9.png" width=740 height=370>
+Then I tried it again one more time, and it still didnt work because thats not how these things work.
+<img src="img/pb10.png" width=740 height=370>
+The next thing I did was give up and work on making the piece so it can wrap around the edges. Now I know how stupid this is going to sound but I decided, oh yeah you just use the diameter and that will be equal to the length of the piece. News flash, thats not how that works. So I took a peice from the <a href="https://www.festi.info/boxes.py/RoundedBox?language=en">box</a>
+ website from a while ago.
+<img src="img/pb11.png" width=740 height=370>
+Then I deleted the little notches for the top part becuase at this point I gave up with trying to make notches and decided glue is just as effective.
+<img src="img/pb12.png" width=740 height=370>
+Then somewhere in my brain I knew this didnt look right so I just decided to double the length of the bedning part pretending that solved the issue, dont worry I fix it later.
+<img src="img/pb13.png" width=740 height=370>
+Then the next part, I am ashamed I tried to do this, but I wanted to create a box in the shape of the side so it was flushed up agaisnt it. Lets say I scraped that idea pretty fast.
+<img src="img/pb14.png" width=740 height=370>
+Then I moved onto the idea of, ok lets just make a box with a fancy top and bottom which will overhang the sides of the box. But even this part I messed up with. So I made a box the length that I wanted the front side and back side to be.
+<img src="img/pb15.png" width=740 height=370>
+Then I tried to make notches again which, I mean just look at it, I gave up that idea fast. It was at this time and this long I gave up and called one of my friends that go to a different school to help me.
+<img src="img/pb16.png" width=740 height=370>
+<img src="img/pb17.png" width=740 height=370>
+Then I created a box to be the pretend top so I could make the sides from there.
+<img src="img/pb18.png" width=740 height=370>
+I made a side with the width the same as the pretend box top and 6 inches for the height.
+<img src="img/pb19.png" width=740 height=370>
+Then I did the same thing for the side of the box the hight matches up to be the same and the width is 6 inches.
+<img src="img/pb20.png" width=740 height=370>
+Now at this point asked my friend the stupid quesiton of, how do you make a cylinder, after a few minutes of her laughing at me she reminded me that it was the circumference of the circle so now was the adventure of finding circumference of the circle. So I drew the a line to find the radius and then put it in a calculator.
+<img src="img/pb21.png" width=740 height=370>
+<img src="img/pb23.png" width=740 height=370>
+Then I created a box that was the the correct length and just matched the actual part to the length of the box and called it a day... well called it a night.
+<img src="img/pb24.png" width=740 height=370>
+Then I did the same thing for a smaller cirlce to act as the lense that pops out.
+<img src="img/pb25.png" width=740 height=370>
+<img src="img/pb26.png" width=740 height=370>
+And finally I had my final cut out.
+<img src="img/pb27.png" width=740 height=370>
+Then I did a 3D drawing of the box but it is a top down view.
+<img src="img/pb28.png" width=740 height=370>
+<img src="img/pb29.png" width=740 height=370>
+For some other things for the final box I need to get <a href="https://www.amazon.com/Gorilla-Wood-Glue-ounce-Bottle/dp/B00HDM9I3S/ref=sr_1_2?crid=3BH2YBIEGP45L&dchild=1&keywords=wood+glue&qid=1601593692&s=hi&sprefix=wood+%2Ctools%2C146&sr=1-2">wood glue </a>, <a href="https://www.amazon.com/Rust-Oleum-Rustoleum-302597-Tidal-Chalked/dp/B01JB78BW6/ref=sr_1_2?crid=BSQSHDM2NJ5H&dchild=1&keywords=teal+paint+for+wood&qid=1601593718&sprefix=teal+paint+for%2Caps%2C152&sr=8-2"> paint </a>, some <a href="https://www.amazon.com/Sanniu-Operated-Christmas-Centerpiece-Decoration/dp/B072NH2FQ1/ref=sr_1_5?dchild=1&keywords=string+led+lights+small&qid=1601593748&sr=8-5"> LED lights </a> , and <a href="https://www.amazon.com/SDTC-Tech-Engraved-Matching-Decorative/dp/B07Y3X24GK/ref=sr_1_8?crid=27LT51H94M9Z2&dchild=1&keywords=little+hinges+for+small+boxes&qid=1601593974&sprefix=little+hing%2Caps%2C146&sr=8-8"> little hinges </a> and a clip. All of that costs to $27.75 before tax. And that was my adventure of creating a little box just to hold some pictures. <a href="https://drive.google.com/drive/folders/1PnElRilHJmpqKe7IIXzbnsaqUE3iQXx_?usp=sharing"> Files for this week </a>
