--- a/www.html
+++ b/www.html
@@ -53,7 +53,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-blue" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
 Ok, so techically we are supposed to document what we did step by step and put it all together in a coherent matter but this project killed my sanity. Not only was I in the lab working for 6 hours but I had not 1, not 2, not 3, not 4, but 5 attempts on getting this to work. attempts 1-3 I deleted all screenshots from out of frustration but heres a summary of them. Attempt 1 I did the wrong symbol, (I ended up printing it out anyways that picture will be at the end) attempt 2 I wanted to do the harder symbol thinking it might be easier... and attempt 3 it looked so ugly I didn't know where I went wrong so I deleted the whole thing to start over. Now after all those attempts you'd think I had enough to string together some logical process of what I ended up doing, and for most I can and some I remeber but the majority of it I did so many different things I couldnt even tell you what worked. Well good news! I did such a good job screenshotting my work I ended up with over 75 screenshots on my lap top. All of them are out of order and no matter which way I sort them they are ALWAYS not in the correct order of me taking them.
-<img src="img/cw1.png" width=740 height=370>
+<img src="img/.cw1.png.icloud" width=740 height=370>
 With the amount of times I changed things and screenshotted each change I ended up getting myslef more confused in the end. Not to mention I changed so much in the end my first attempts on the 4th attempts weren't even the final product. Now just to clear things up attempt number 4 was the one I ended up printing out, so why is there a attempt 5? Well I thought "oh maybe I can just recreate it one more time and screenshot it there" lets just say that didn't work either cause I ran into the same problem of trying to remeber what ended up working. But there is some good news with all of this. I know how to do the very start and then the very end. The middle I'm just going to say what I did and why it didn't work.
 
 So the first thing I did was create a sketch on the bottom layer. Then I used the circle tool to create a circle 50mm long.
@@ -118,12 +118,12 @@ So I changed the size of the gaps just by changing that 1 line size. and I also 
 <img src="img/cw37.png" width=740 height=370>
 <img src="img/cw36.png" width=740 height=370>
 When I exported it I had no issues whats so ever, for once. I dont have any screenshots only because I was very tired at this point and needed to get it printed that night. So with no issue I saved it to the cloud first then exported it as a .snl, then I put it on my drive from my laptop onto the mac desktops. Opened the file in prusaslicer, slected the correct printer and added it to the SD card. Then I rolled the chair over to the printer, put in my filament and hit go. And about a few minutes in I noticed it wasn't sticking. Oh of course it didn't want to stick. I took out the SD card and the filament and reopened the file on prusaslicer changed the printer set up the new printer and it printed like a charm.
-<img src="img/cw38%20copy.jpg" width=740 height=370>
-<img src="img/cw39%20copy.jpg" width=740 height=370>
+<img src="img/.cw38.jpg.icloud" width=740 height=370>
+<img src="img/.cw39.jpg.icloud" width=740 height=370>
 <img src="img/cw40%20copy.JPG" width=370 height=540>
 Here is a picture of me right after it was printed. I was then very done with this project and very tired but I thought it would be funny to add here anyways.
-<img src="img/cw41%20copy.JPG" width=370 height=540>
+<img src="img/.cw41%20copy.JPG.icloud" width=370 height=540>
 And then here is the image of the wrong one I printed out
-<img src="img/cw42%20copy.jpg" width=370 height=540>
+<img src="img/.cw42%20copy.jpg.icloud" width=370 height=540>
 Overall I didn't actually hate this project it was quite fun. My biggest issues probably had to be not knowing geometry, drawing straight lines, and assuming things would just work the way you'd think they would. In the end all I can say is... I missed using blender.
-
+<a href="https://drive.google.com/drive/folders/1x7_0PIvm3ByB9lQJDLlRbcDEMU6dG9LG?usp=sharing">File for this week</a>
